# rgpt

./: Cargo.toml  Implementation plan.md  README.md  dist-workspace.toml
src/: cache.rs  chat.rs  cli.rs  config.rs  debug.rs  editor.rs  fsutil.rs  main.rs  render.rs  role.rs  shell_cmd.rs  tools.rs  uninstall.rs
src/client/: mod.rs  ollama_native.rs  openai_compat.rs
src/handler/: chat.rs  default.rs  mod.rs  repl.rs
